--- a/templates/page.html
+++ b/templates/page.html
@@ -28,7 +28,7 @@
 {% endblock opengraph %}
 
 {% block twittercard %}
-<meta name="twitter:card" content="summary">
+<meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="{{ page.title }}">
 <meta name="twitter:description" content="{{ page.description | default(value=config.description) }}">
 {% if page.extra.og_image %}
@@ -264,6 +264,7 @@
 </article>
 
 <!-- JSON-LD Structured Data -->
+{% block jsonld %}
 <script type="application/ld+json">
 {
     "@context": "https://schema.org",
@@ -281,6 +282,7 @@
         "name": "{{ config.extra.author }}",
         "url": "{{ config.base_url | safe }}/about/"
     },
+    "image": "{{ config.base_url | safe }}{% if page.extra.og_image %}{{ page.extra.og_image }}{% elif config.extra.og_image %}{{ config.extra.og_image }}{% endif %}",
     "publisher": {
         "@type": "Person",
         "name": "{{ config.extra.author }}"
@@ -291,6 +293,7 @@
     }
 }
 </script>
+{% endblock jsonld %}
 
 <script>
 document.addEventListener('DOMContentLoaded', function() {
